# tarantool

./: .checkpatch.conf  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .luacheckrc  .test.mk  .travis.mk  .travis.yml  AUTHORS  CMakeLists.txt  README.md
.clusterfuzzlite/: Dockerfile  build.sh
changelogs/: 2.10.0-picodata.md
cmake/: BuildICONV.cmake  BuildICU.cmake  BuildLDAP.cmake  BuildLibCORO.cmake  BuildLibCURL.cmake  BuildLibXXhash.cmake  BuildOpenSSL.cmake  BuildReadline.cmake  BuildSASL.cmake  BuildZLIB.cmake  BuildZSTD.cmake  BuildZZIP.cmake  FindLDAP.cmake  FindSASL.cmake  compiler.cmake
debian/: control  copyright
debian-picodata/: changelog  control  copyright  rules  tarantool-picodata-common.install.systemd.in  tarantool-picodata-common.lintian-overrides  tarantool-picodata-common.postrm  tarantool-picodata.README.Debian  tarantool-picodata.lintian-overrides
docker/: Dockerfile  Dockerfile.ci  Dockerfile.release
extra/: addopcodes.sh  exports  lemon.c  lempar.c  mkkeywordhash.c  pico_parse_git_log.py
perf/: tuple.cc
rpm/: tarantool-picodata.spec
src/: CMakeLists.txt  (+5 more)
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  backtrace.c  backtrace.h  cbus.c  cbus.h  coio.h  crash.c  crypt.c  crypt.h  cryptohash.c  cryptohash.h  errinj.h  fiber.c  fiber.h  iostream.h  latch.c  latch.h  md5.c  md5.h  port.h  random.h  say.c  say.h  shmem.c  shmem.h  sio.c  sio.h  ssl_error.cc  ssl_error.h  ssl_impl.c  ssl_impl.h  trigger.cc  tt_uuid.h
src/lib/crypto/: CMakeLists.txt
src/lib/swim/: CMakeLists.txt
src/lib/tzcode/: localtime.c
(+364 files in other folders)
